##
##
## This file is a part of Aleph
##
## https://github.com/nathanvoglsam/aleph
##
## MIT License
##
## Copyright (c) 2020 Aleph Engine
##
## Permission is hereby granted, free of charge, to any person obtaining a copy
## of this software and associated documentation files (the "Software"), to deal
## in the Software without restriction, including without limitation the rights
## to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
## copies of the Software, and to permit persons to whom the Software is
## furnished to do so, subject to the following conditions:
##
## The above copyright notice and this permission notice shall be included in all
## copies or substantial portions of the Software.
##
## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
## IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
## FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
## AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
## LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
## OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
## SOFTWARE.
##


[package]
name = "aleph-windows-raw"
version = "0.1.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
description = "The aleph-engine windows interface"
license = "MIT"
repository = "https://github.com/nathanvoglsam/aleph"
documentation = "https://docs.rs/aleph-windows-raw/"
readme = "README.md"
## TODO: keywords = ["engine", "graphics", "directx", "game"]
## TODO: categories = ["game-engines"]
edition = "2021"
build = "build.rs"

[badges]
azure-devops = { project = "nathanvoglsam420/Aleph", pipeline = "nathanvoglsam.aleph", build = "1" }

[dependencies.once_cell]
version = "1"

[dependencies]
windows = "0.7"

[build-dependencies]
windows = "0.7"

[build-dependencies.syn]
version = "1"
default-features = false
features = ["derive", "parsing", "printing", "clone-impls", "full", "extra-traits"]

[build-dependencies.proc-macro2]
version = "1"
default-features = false

[build-dependencies.quote]
version = "1"
default-features = false
