##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##


[package]
name = "aleph-engine"
version = "0.1.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
description = "A Rust and Vulkan powered 3D game engine"
license = "<ALEPH_LICENSE_NAME_REPLACE>"
repository = "<ALEPH_REPO_REPLACE>"
documentation = "https://docs.rs/aleph-engine/"
readme = "README.md"
keywords = ["engine", "graphics", "vulkan", "game"]
categories = ["game-engines"]
edition = "2018"

[badges]
azure-devops = { project = "<ALEPH_CI_PROJECT_REPLACE>", pipeline = "<ALEPH_CI_PIPELINE_REPLACE>", build = "1" }

[dependencies]
aleph-app-info = { path = "../aleph-app-info", version = "0.1.0" }
aleph-cpu-info = { path = "../aleph-cpu-info", version = "0.1.0" }
aleph-log = { path = "../../utils/aleph-log", version = "1.0.0" }
aleph-logger = { path = "../../utils/aleph-logger", version = "0.1.0" }
aleph-platform = { path = "../aleph-platform", version = "0.1.0" }
aleph-settings = { path = "../aleph-settings", version = "0.1.0" }
aleph-render = { path = "../../graphics/aleph-render", version = "0.1.0" }
aleph-target = { path = "../../utils/aleph-target", version = "1.0.0" }
aleph-vulkan = { path = "../../graphics/aleph-vulkan", version = "0.1.0" }
aleph-vulkan-core = { path = "../../graphics/aleph-vulkan-core", version = "0.1.0" }
aleph-vulkan-alloc = { path = "../../graphics/aleph-vulkan-alloc", version = "0.1.0" }
clap = "2.33"
rayon = "1.3"
once_cell = "1.4"
palette = "0.5"
