##
##
## This file is a part of Aleph
##
## https://github.com/nathanvoglsam/aleph
##
## MIT License
##
## Copyright (c) 2020 Aleph Engine
##
## Permission is hereby granted, free of charge, to any person obtaining a copy
## of this software and associated documentation files (the "Software"), to deal
## in the Software without restriction, including without limitation the rights
## to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
## copies of the Software, and to permit persons to whom the Software is
## furnished to do so, subject to the following conditions:
##
## The above copyright notice and this permission notice shall be included in all
## copies or substantial portions of the Software.
##
## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
## IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
## FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
## AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
## LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
## OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
## SOFTWARE.
##


[package]
name = "aleph-engine"
version = "0.1.0"
authors.workspace = true
description = "A Rust and Vulkan powered 3D game engine"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aleph-engine/"
keywords = ["engine", "graphics", "vulkan", "game"]
categories = ["game-engines"]
edition.workspace = true

[badges]
azure-devops = { project = "nathanvoglsam420/Aleph", pipeline = "nathanvoglsam.aleph", build = "1" }

[package.metadata.aleph]
configs = ["core", "rhi", "render"]
shaders = { modules = ["egui"] }

[features]
default = []
development-build = ["aleph-target/development-build", "aleph-rhi-api/markers"]
instrumentation = ["aleph-alloc/instrumentation-enabled"]

[dependencies]
aleph-alloc = { workspace = true }
aleph-object-system = { workspace = true }
aleph-engine-api = { workspace = true }
aleph-target = { workspace = true }
aleph-sys-info = { workspace = true }
aleph-profile = { workspace = true }
aleph-config = { workspace = true }
aleph-identity-hasher = { workspace = true }
aleph-rhi-loader = { workspace = true }
aleph-rhi-api = { workspace = true }
aleph-objc = { workspace = true }
aleph-device-allocators = { workspace = true }
aleph-egui = { workspace = true }
aleph-frame-graph = { workspace = true }
aleph-math = { workspace = true }
aleph-pin-board = { workspace = true }
aleph-shader-db = { workspace = true }
aleph-nstr = { workspace = true }
aleph-magnesium = { workspace = true }

log = { workspace = true }
utf16_lit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
sdl3 = { workspace = true }
parking_lot = { workspace = true }
raw-window-handle = { workspace = true }
smallbox = { workspace = true }
env_logger = { workspace = true }
rkyv = { workspace = true }

[build-dependencies]
aleph-compile = { workspace = true }
aleph-target = { workspace = true }

[target.'cfg(windows)'.dependencies]
aleph-windows = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
