##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##


[package]
name = "aleph-math"
version = "0.1.0"
authors = ["Nathan Voglsam <godbotherer4@gmail.com>"]
description = "Vector and matrix math utilities for Aleph"
license = "<ALEPH_LICENSE_NAME_REPLACE>"
repository = "<ALEPH_REPO_REPLACE>"
documentation = "https://docs.rs/aleph-math/"
readme = "README.md"
keywords = ["matrix", "vector", "math", "projection", "simd"]
categories = ["algorithms", "game-engines", "no-std"]
edition = "2018"

[badges]
azure-devops = { project = "<ALEPH_CI_PROJECT_REPLACE>", pipeline = "<ALEPH_CI_PIPELINE_REPLACE>", build = "1" }

[dependencies]
num-traits = "0.2"
