##
##
## This file is a part of Aleph
##
## https://github.com/nathanvoglsam/aleph
##
## MIT License
##
## Copyright (c) 2020 Aleph Engine
##
## Permission is hereby granted, free of charge, to any person obtaining a copy
## of this software and associated documentation files (the "Software"), to deal
## in the Software without restriction, including without limitation the rights
## to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
## copies of the Software, and to permit persons to whom the Software is
## furnished to do so, subject to the following conditions:
##
## The above copyright notice and this permission notice shall be included in all
## copies or substantial portions of the Software.
##
## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
## IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
## FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
## AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
## LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
## OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
## SOFTWARE.
##


[package]
name = "aleph-objc"
version = "0.1.0"
authors.workspace = true
description = "Apple specific utilities for aleph-engine"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aleph-objc/"
edition.workspace = true

[badges]
azure-devops = { project = "nathanvoglsam420/Aleph", pipeline = "nathanvoglsam.aleph", build = "1" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = { workspace = true }
objc2-metal = { workspace = true }
objc2-quartz-core = { workspace = true }
objc2-core-foundation = { workspace = true }
objc2-foundation = { workspace = true }

