##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##


[package]
name = "aleph-platform"
version = "0.1.0"
authors = ["Nathan Voglsam <godbotherer4@gmail.com>"]
description = "The windowing and input interface for aleph-engine"
license = "<ALEPH_LICENSE_NAME_REPLACE>"
repository = "<ALEPH_REPO_REPLACE>"
documentation = "https://docs.rs/aleph-platform/"
readme = "README.md"
## TODO: keywords = ["macro", "utility"]
## TODO: categories = ["development-tools::build-utils"]
edition = "2018"

[dependencies]
aleph-app-info = { path = "../aleph-app-info", version = "0.1" }
aleph-log = { path = "../../utils/aleph-log", version = "1" }
aleph-settings = { path = "../aleph-settings", version = "0.1" }
sdl2 = { version = "0.34", features = ["raw-window-handle"] }
raw-window-handle = "0.3"
once_cell = "1.4"
parking_lot = "0.10"

[build-dependencies]
cmake = "0.1"
aleph-compile = { path = "../../utils/aleph-compile", version = "1" }
aleph-target-build = { path = "../../utils/aleph-target-build", version = "1" }

[badges]
azure-devops = { project = "<ALEPH_CI_PROJECT_REPLACE>", pipeline = "<ALEPH_CI_PIPELINE_REPLACE>", build = "1" }
