##
##
## This file is a part of Aleph
##
## https://github.com/nathanvoglsam/aleph
##
## MIT License
##
## Copyright (c) 2020 Aleph Engine
##
## Permission is hereby granted, free of charge, to any person obtaining a copy
## of this software and associated documentation files (the "Software"), to deal
## in the Software without restriction, including without limitation the rights
## to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
## copies of the Software, and to permit persons to whom the Software is
## furnished to do so, subject to the following conditions:
##
## The above copyright notice and this permission notice shall be included in all
## copies or substantial portions of the Software.
##
## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
## IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
## FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
## AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
## LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
## OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
## SOFTWARE.
##


[package]
name = "aleph-test"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[package.metadata.aleph]
configs = ["@game"]

[lib]
crate-type = ["cdylib"]
name = "aleph_test_lib"
path = "./src/lib.rs"

[dependencies]
aleph-engine = { workspace = true }
aleph-rhi-api = { workspace = true }
aleph-egui = { workspace = true }
aleph-render = { workspace = true }
aleph-device-allocators = { workspace = true }
aleph-profile = { workspace = true, features = ["profile-with-tracy"] }

bytemuck = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }

image = "0.25"

mikktspace = "0.3"

[dependencies.gltf]
version = "1"
features = [
    "KHR_lights_punctual",
    "KHR_materials_emissive_strength",
    "KHR_materials_ior",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_specular",
    "KHR_materials_transmission",
    "KHR_materials_unlit",
    "KHR_materials_variants",
    "KHR_materials_volume",
    "KHR_texture_transform"
]


[target.'cfg(windows)'.dependencies]
aleph-dx12-agility-sdk = { workspace = true }

[build-dependencies]
aleph-engine-build = { workspace = true }
