##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##


[package]
name = "aleph-render"
version = "0.1.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
description = "The aleph-engine renderer"
license = "<ALEPH_LICENSE_NAME_REPLACE>"
repository = "<ALEPH_REPO_REPLACE>"
documentation = "https://docs.rs/aleph-render/"
readme = "README.md"
keywords = ["engine", "graphics", "vulkan", "game"]
categories = ["game-engines"]
edition = "2018"

[badges]
azure-devops = { project = "<ALEPH_CI_PROJECT_REPLACE>", pipeline = "<ALEPH_CI_PIPELINE_REPLACE>", build = "1" }

[dependencies]
aleph-log = { path = "../../utils/aleph-log", version = "1" }
aleph-vulkan = { path = "../aleph-vulkan", version = "0.1.0" }
once_cell = "1.3"
imgui = "0.4"
