##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##


[package]
name = "aleph-vulkan-alloc"
version = "0.1.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
description = "Wrapper for AMD's VulkanMemoryAllocator"
license = "<ALEPH_LICENSE_NAME_REPLACE>"
repository = "<ALEPH_REPO_REPLACE>"
documentation = "https://docs.rs/aleph-vulkan-alloc/"
readme = "README.md"
keywords = ["engine", "graphics", "vulkan", "game"]
categories = ["game-engines"]
edition = "2018"

[badges]
azure-devops = { project = "<ALEPH_CI_PROJECT_REPLACE>", pipeline = "<ALEPH_CI_PIPELINE_REPLACE>", build = "1" }

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
aleph-vulkan-core = { path = "../aleph-vulkan-core", version = "0.1" }
aleph-vma-sys = { path = "../aleph-vma-sys", version = "1" }
