##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##


[package]
name = "aleph-vulkan"
version = "0.1.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
description = "A higher level abstraction around vulkan designed to reduce API surface area and provide a *safer* (not completely) interface"
license = "<ALEPH_LICENSE_NAME_REPLACE>"
repository = "<ALEPH_REPO_REPLACE>"
documentation = "https://docs.rs/aleph-vulkan/"
readme = "README.md"
keywords = ["engine", "graphics", "vulkan", "game"]
categories = ["game-engines"]
edition = "2018"

[badges]
azure-devops = { project = "<ALEPH_CI_PROJECT_REPLACE>", pipeline = "<ALEPH_CI_PIPELINE_REPLACE>", build = "1" }

[dependencies]
aleph-embedded-data = { path = "../../engine/aleph-embedded-data", version = "0.1.0" }
aleph-log = { path = "../../utils/aleph-log", version = "1" }
aleph-vulkan-alloc = { path = "../aleph-vulkan-alloc", version = "0.1.0" }
aleph-vulkan-core = { path = "../aleph-vulkan-core", version = "0.1.0" }
once_cell = "1.4"
spirv-reflect = "0.2"
