##
##
## This file is a part of Aleph
##
## https://github.com/nathanvoglsam/aleph
##
## MIT License
##
## Copyright (c) 2020 Aleph Engine
##
## Permission is hereby granted, free of charge, to any person obtaining a copy
## of this software and associated documentation files (the "Software"), to deal
## in the Software without restriction, including without limitation the rights
## to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
## copies of the Software, and to permit persons to whom the Software is
## furnished to do so, subject to the following conditions:
##
## The above copyright notice and this permission notice shall be included in all
## copies or substantial portions of the Software.
##
## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
## IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
## FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
## AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
## LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
## OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
## SOFTWARE.
##


[package]
name = "aleph-sdl2"
version = "0.1.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
description = "The windowing and input implementation for aleph, based on SDL2"
license = "MIT"
repository = "https://github.com/nathanvoglsam/aleph"
documentation = "https://docs.rs/aleph-sdl2/"
readme = "README.md"
## TODO: keywords = ["macro", "utility"]
## TODO: categories = ["development-tools::build-utils"]
edition = "2021"

[dependencies]
aleph-log = { path = "../../crates/aleph-log", version = "1" }
aleph-interfaces = { path = "../../crates/aleph-interfaces", version = "0.1" }

ctrlc = "3"
once_cell = "1"
parking_lot = "0.11"
raw-window-handle = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
aleph-windows-raw = { path = "../../crates/aleph-windows-raw", version = "0.1" }

[dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2.git"
version = "0.35"
rev = "cfdb4359892f2ddc46147db8e3ea3f1f6ab5d977"
features = ["raw-window-handle"]

[build-dependencies]
cmake = "0.1"
aleph-compile = { path = "../../crates/aleph-compile", version = "1" }
aleph-target-build = { path = "../../crates/aleph-target-build", version = "2" }

[badges]
azure-devops = { project = "nathanvoglsam420/Aleph", pipeline = "nathanvoglsam.aleph", build = "1" }
