##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##


[package]
name = "aleph-compile"
version = "1.0.0"
authors = ["Nathan Voglsam <godbotherer4@gmail.com>"]
description = "Utilities used by aleph build scripts"
license = "<ALEPH_LICENSE_NAME_REPLACE>"
repository = "<ALEPH_REPO_REPLACE>"
documentation = "https://docs.rs/aleph-compile/"
readme = "README.md"
keywords = ["build", "compilation", "utility"]
categories = ["development-tools::build-utils"]
edition = "2018"

[badges]
azure-devops = { project = "<ALEPH_CI_PROJECT_REPLACE>", pipeline = "<ALEPH_CI_PIPELINE_REPLACE>", build = "1" }
