##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##


[package]
name = "aleph-logger"
version = "0.1.0"
authors = ["Nathan Voglsam <godbotherer4@gmail.com>"]
description = "Wrapper for platform specific logger initialization"
license = "<ALEPH_LICENSE_NAME_REPLACE>"
repository = "<ALEPH_REPO_REPLACE>"
documentation = "https://docs.rs/aleph-logger/"
readme = "README.md"
## TODO: keywords = ["macro", "utility"]
## TODO: categories = ["development-tools::build-utils"]
edition = "2018"

[dependencies]
aleph-log = { path = "../aleph-log", version = "1" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.7"

[badges]
azure-devops = { project = "<ALEPH_CI_PROJECT_REPLACE>", pipeline = "<ALEPH_CI_PIPELINE_REPLACE>", build = "1" }
