##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##

[package]
name = "aleph-target"
version = "1.0.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
description = "Library for compile time platform detection"
license = "<ALEPH_LICENSE_NAME_REPLACE>"
repository = "<ALEPH_REPO_REPLACE>"
documentation = "https://docs.rs/aleph-target/"
readme = "README.md"
keywords = ["platform-detection", "platform", "build", "build-script", "const"]
edition = "2018"

[badges]
azure-devops = { project = "<ALEPH_CI_PROJECT_REPLACE>", pipeline = "<ALEPH_CI_PIPELINE_REPLACE>", build = "1" }
